# chesspuzzledownload

./: .env.example  .gitignore  README.md  app.py  constants.py  ingest.py  local.db  main.py  pyproject.toml  run_ingest.py
api/: index.py  requirements.txt
core/: cache.py  db.py  sqlite.py
ingestion/: ingest.py  run_ingest.py
puzzles/: chess.py  constants.py  db.py  pdf.py  routes.py  state.py  validators.py  views.py
puzzles/data/: queries.py  state.py
puzzles/pdf/: generate.py
scripts/: ingest.py  migrate_add_rating.py  migrate_junction_tables.py  sync_local.py
static/: styles.css
static/puzzles/: styles.css
