[project]
name = "chesspuzzledownload"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datasets>=5.0.0",
    "fpdf2>=2.8.7",
    "huggingface-hub>=1.18.0",
    "libsql-experimental>=0.0.55",
    "pandas>=3.0.3",
    "python-chess>=1.999",
    "python-dotenv>=1.2.2",
    "python-fasthtml>=0.14.2",
]
